--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/three": "latest",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -59,7 +60,7 @@
     "maath": "latest",
     "motion": "^12.23.22",
     "next": "^15.5.4",
-    "next-themes": "latest",
+    "next-themes": "^0.4.6",
     "path": "latest",
     "react": "^19",
     "react-day-picker": "9.8.0",
