--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-three/drei": "latest",
     "@react-three/fiber": "latest",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.76.1",
     "@types/three": "latest",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
@@ -75,7 +77,7 @@
     "three": "latest",
     "url": "latest",
     "vaul": "^0.9.9",
-    "zod": "3.25.67"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
