--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-three/drei": "latest",
     "@react-three/fiber": "latest",
-    "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.76.1",
+    "@supabase/supabase-js": "^2.81.1",
     "@types/three": "latest",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
@@ -51,7 +50,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "expo": "latest",
+    "expo": "^54.0.23",
     "expo-asset": "latest",
     "expo-file-system": "latest",
     "expo-gl": "latest",
@@ -68,7 +67,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
-    "react-native": "latest",
+    "react-native": "^0.75.5",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
@@ -77,7 +76,7 @@
     "three": "latest",
     "url": "latest",
     "vaul": "^0.9.9",
-    "zod": "^3.25.67"
+    "zod": "3.25.67"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
