--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_FORMSPREE_URL=""
 NEXT_PUBLIC_SUPABASE_URL=""
 NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+NEXT_PUBLIC_HUGGINGFACE_URL=""
+NEXT_PUBLIC_MODEL="
